--- a/Turizmas Lietuvoje/index.html
+++ b/Turizmas Lietuvoje/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="navBar">
-        <a href="#" class="logo">Turizmas Lietuvoje</a>
+        <a href="#" class="logo"><img src="IMG/Main Page/LOGO.png" alt="logo" width="150px" height="75px"></a>
         <ul>
         <li><a href="#">Pagrindinis</a></li>
         <li><a href="#">Vietos</a></li>
