--- a/Turizmas Lietuvoje/index.html
+++ b/Turizmas Lietuvoje/index.html
@@ -8,22 +8,45 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
+    <!-- Header -->
     <div class="navBar">
-        <a href="#" class="logo"><img src="IMG/MainPage/LOGO.png" alt="logo" width="150px" height="75px"></a>
+        <a href="#" class="logo"><img src="IMG/MainPage/LOGO.png" alt="logo"></a>
         <ul>
         <li><a href="#">Pagrindinis</a></li>
-        <li><a href="#">Vietos</a></li>
-        <li><a href="#">Turai</a></1i>
-        <li><a href="#">Testas</a></1i>
+        <li><a href="#">Žemėlapis</a></li>
+        <li><a href="#">Vietos</a></1i>
         <li><a href="#">Kontaktai</a></1i>
         </ul>
     </div>
 
+    <!-- 1st main part -->
     <div class="main-section">
         <div class="short-info">
-            This is the main section. Here's a short piece of information.
+            <p class="titleTG">Turistų Gidas</p>
+            <p class="TGshortinfo">Pasinerkite į Vilniaus apskritį - tūkstantmečius senąją Lietuvos sostinę - su mūsų turistų gido pagalba.<br> 
+                <br>
+                Mūsų svetainė suteikia jums galimybę atrasti nuostabias Vilniaus apskrities vietoves, mėgautis kultūra, istorija ir gamta. Jūs sužinosite apie lankytinas vietas, įdomius renginius. <br>
+                <br>
+                Pradėkite savo neįprastą kelionę Vilniaus apskritimi su mūsų turistų gidu!</p>
         </div>
-        <a href="#" class="learn-more-btn" role="button">Learn More</a>
+        <a href="#" class="learn-more-btn" role="button">Žemėlapis</a>
+    </div>
+
+    <!-- 2nd main part -->
+    <div class="LankytinosVietos">
+        <p class="LankytinosVietosPavadinimas">Lankytinos Vietos</p>
+        
+        <div class="LankytinosVietosMygtukai">
+            <button class="vilniausMS">Vilniaus miesto savivaldybė</button>
+            <button class="vilniusRS">Vilniaus Rajono savivaldybė</button>
+            <button class="elektrenuS">Elektrėnų savivaldybė</button>
+            <button class="salcininkuRS">Šalčininkų rajono savivaldybė</button>
+            <button class="sirvintuRS">Širvintų rajono savivaldybė</button>
+            <button class="svencioniuRS">Švenčionių rajono savivaldybė</button>
+            <button class="trakuRS">Trakų rajono savivaldybė</button>
+            <button class="ukmergesRS">Ukmergės rajono savivaldybė</button>
+        </div>
+
     </div>
         
     <script src="JS/main.js"></script>
