--- a/Turizmas Lietuvoje/index.html
+++ b/Turizmas Lietuvoje/index.html
@@ -37,17 +37,31 @@
         <p class="LankytinosVietosPavadinimas">Lankytinos Vietos</p>
         
         <div class="LankytinosVietosMygtukai">
-            <button class="vilniausMS">Vilniaus miesto savivaldybė</button>
-            <button class="vilniusRS">Vilniaus Rajono savivaldybė</button>
-            <button class="elektrenuS">Elektrėnų savivaldybė</button>
-            <button class="salcininkuRS">Šalčininkų rajono savivaldybė</button>
-            <button class="sirvintuRS">Širvintų rajono savivaldybė</button>
-            <button class="svencioniuRS">Švenčionių rajono savivaldybė</button>
-            <button class="trakuRS">Trakų rajono savivaldybė</button>
-            <button class="ukmergesRS">Ukmergės rajono savivaldybė</button>
+            <div class="lankytinosVietosMygtukai-grid">
+                <a href="#" role="button"><button class="LVmygtukas">Vilniaus miesto savivaldybė</button></a>
+                <a href="#" role="button"><button class="LVmygtukas">Vilniaus Rajono savivaldybė</button></a>
+                <a href="#" role="button"><button class="LVmygtukas">Elektrėnų savivaldybė</button></a>
+                <a href="#" role="button"><button class="LVmygtukas">Šalčininkų rajono savivaldybė</button></a>
+                <a href="#" role="button"><button class="LVmygtukas">Širvintų rajono savivaldybė</button></a>
+                <a href="#" role="button"><button class="LVmygtukas">Švenčionių rajono savivaldybė</button></a>
+                <a href="#" role="button"><button class="LVmygtukas">Trakų rajono savivaldybė</button></a>
+                <a href="#" role="button"><button class="LVmygtukas">Ukmergės rajono savivaldybė</button></a>
+            </div>
         </div>
-
     </div>
+
+    <!-- FOOTER -->
+    <footer>
+        <div class="footer-container">
+            <div class="footer-info">
+                <p>© 2023 Turistų gidas po Vilniaus apskriti</p>
+                <p>Visos teisės saugomos</p>
+                <p>Kontaktai: info@vilniausapskritisgidas.lt</p>
+                <p>Tel. +370 123 456 789</p>
+                <p>Saugumas ir privatumas</p>
+            </div>
+        </div>
+    </footer>
         
     <script src="JS/main.js"></script>
 </body>
