--- a/Turizmas Lietuvoje/index.html
+++ b/Turizmas Lietuvoje/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turizmas Lietuvoje</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
     <!-- Header -->
     <div class="navBar">
-        <a href="#" class="logo"><img src="IMG/MainPage/LOGO.png" alt="logo"></a>
+        <a href="#" class="logo"><img src="IMG/MainPage/LOGO.png" alt="logo" width="190px"></a>
         <ul>
         <li><a href="#">Pagrindinis</a></li>
         <li><a href="#">Žemėlapis</a></li>
-        <li><a href="#">Vietos</a></1i>
         <li><a href="#">Kontaktai</a></1i>
         </ul>
     </div>
@@ -35,19 +35,6 @@
     <!-- 2nd main part -->
     <div class="LankytinosVietos">
         <p class="LankytinosVietosPavadinimas">Lankytinos Vietos</p>
-        
-        <div class="LankytinosVietosMygtukai">
-            <div class="lankytinosVietosMygtukai-grid">
-                <a href="#" role="button"><button class="LVmygtukas">Vilniaus miesto savivaldybė</button></a>
-                <a href="#" role="button"><button class="LVmygtukas">Vilniaus Rajono savivaldybė</button></a>
-                <a href="#" role="button"><button class="LVmygtukas">Elektrėnų savivaldybė</button></a>
-                <a href="#" role="button"><button class="LVmygtukas">Šalčininkų rajono savivaldybė</button></a>
-                <a href="#" role="button"><button class="LVmygtukas">Širvintų rajono savivaldybė</button></a>
-                <a href="#" role="button"><button class="LVmygtukas">Švenčionių rajono savivaldybė</button></a>
-                <a href="#" role="button"><button class="LVmygtukas">Trakų rajono savivaldybė</button></a>
-                <a href="#" role="button"><button class="LVmygtukas">Ukmergės rajono savivaldybė</button></a>
-            </div>
-        </div>
     </div>
 
     <!-- FOOTER -->
