--- a/Turizmas Lietuvoje/index.html
+++ b/Turizmas Lietuvoje/index.html
@@ -10,14 +10,33 @@
 </head>
 <body>
     <!-- Header -->
-    <div class="navBar">
+    <!-- <div class="navBar">
         <a href="#" class="logo"><img src="IMG/MainPage/LOGO.png" alt="logo" width="190px"></a>
         <ul>
         <li><a href="#">Pagrindinis</a></li>
         <li><a href="#">Žemėlapis</a></li>
         <li><a href="#">Kontaktai</a></1i>
         </ul>
-    </div>
+    </div> -->
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-custom">
+        <div class="container d-flex align-items-center">
+           <a href="#" class="logo mr-auto">
+             <img src="IMG/MainPage/LOGO.png" alt="logo" width="190px">
+           </a>
+           <ul class="navbar-nav">
+             <li class="nav-item">
+               <a href="#" class="nav-link">Pagrindinis</a>
+             </li>
+             <li class="nav-item">
+               <a href="#" class="nav-link">Žemėlapis</a>
+             </li>
+             <li class="nav-item">
+               <a href="#" class="nav-link">Kontaktai</a>
+             </li>
+           </ul>
+        </div>
+       </nav>
 
     <!-- 1st main part -->
     <div class="main-section">
