--- a/Turizmas Lietuvoje/index.html
+++ b/Turizmas Lietuvoje/index.html
@@ -20,26 +20,26 @@
     </div> -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-custom">
-        <div class="container d-flex align-items-center">
-           <a href="#" class="logo mr-auto">
-             <img src="IMG/MainPage/LOGO.png" alt="logo" width="190px">
-           </a>
-           <ul class="navbar-nav">
-             <li class="nav-item">
-               <a href="#" class="nav-link">Pagrindinis</a>
-             </li>
-             <li class="nav-item">
-               <a href="#" class="nav-link">Žemėlapis</a>
-             </li>
-             <li class="nav-item">
-               <a href="#" class="nav-link">Kontaktai</a>
-             </li>
-           </ul>
-        </div>
-       </nav>
+      <div class="container d-flex align-items-center">
+          <a href="#" class="logo mr-auto">
+              <img src="IMG/MainPage/LOGO.png" alt="logo" width="190px">
+          </a>
+          <ul class="navbar-nav">
+              <li class="nav-item" style="margin-right: 20px;"> 
+                  <a href="#" class="nav-link">Pagrindinis</a>
+              </li>
+              <li class="nav-item" style="margin-right: 20px;">
+                  <a href="#" class="nav-link">Žemėlapis</a>
+              </li>
+              <li class="nav-item">
+                  <a href="#" class="nav-link">Kontaktai</a>
+              </li>
+          </ul>
+      </div>
+  </nav>
 
     <!-- 1st main part -->
-    <div class="main-section">
+    <!-- <div class="main-section">
         <div class="short-info">
             <p class="titleTG">Turistų Gidas</p>
             <p class="TGshortinfo">Pasinerkite į Vilniaus apskritį - tūkstantmečius senąją Lietuvos sostinę - su mūsų turistų gido pagalba.<br> 
@@ -49,12 +49,29 @@
                 Pradėkite savo neįprastą kelionę Vilniaus apskritimi su mūsų turistų gidu!</p>
         </div>
         <a href="#" class="learn-more-btn" role="button">Žemėlapis</a>
-    </div>
+    </div> -->
+    <div class="main-section">
+      <div class="container d-flex align-items-center justify-content-center">
+        <div class="short-info text-center">
+            <p class="titleTG">Turistų Gidas</p>
+            <p class="TGshortinfo">
+                Pasinerkite į Vilniaus apskritį - tūkstantmečius senąją Lietuvos sostinę - su mūsų turistų gido pagalba.<br> 
+                <br>
+                Mūsų svetainė suteikia jums galimybę atrasti nuostabias Vilniaus apskrities vietoves, mėgautis kultūra, istorija ir gamta. Jūs sužinosite apie lankytinas vietas, įdomius renginius. <br>
+                <br>
+                Pradėkite savo neįprastą kelionę Vilniaus apskritimi su mūsų turistų gidu!
+            </p>
+        </div>
+    </div>    
+      <a href="#" class="learn-more-btn" role="button">Žemėlapis</a>
+  </div>
 
     <!-- 2nd main part -->
     <div class="LankytinosVietos">
         <p class="LankytinosVietosPavadinimas">Lankytinos Vietos</p>
     </div>
+
+    
 
     <!-- FOOTER -->
     <footer>
