--- a/Turizmas Lietuvoje/žemelapis.html
+++ b/Turizmas Lietuvoje/žemelapis.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontaktai</title>
-    <link rel="stylesheet" href="CSS/kontaktai.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="CSS/kontaktai.css">
+    <title>Žemėlapis</title>
+    <link rel="stylesheet" href="CSS/zemelapis.css">
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
 </head>
 <body>
@@ -32,7 +30,7 @@
 
         <!-- MAIN -->
         <div class="kontaktai">
-
+            
         </div>
 
         <!-- FOOTER -->
