--- a/Turizmas Lietuvoje/index.html
+++ b/Turizmas Lietuvoje/index.html
@@ -18,13 +18,13 @@
           </a>
           <ul class="navbar-nav">
               <li class="nav-item" style="margin-right: 20px;"> 
-                  <a href="#" class="nav-link">Pagrindinis</a>
+                  <a href="index.html" class="nav-link">Pagrindinis</a>
               </li>
               <li class="nav-item" style="margin-right: 20px;">
-                  <a href="#" class="nav-link">Žemėlapis</a>
+                  <a href="žemelapis.html" class="nav-link">Žemėlapis</a>
               </li>
               <li class="nav-item">
-                  <a href="#" class="nav-link">Kontaktai</a>
+                  <a href="kontaktai.html" class="nav-link">Kontaktai</a>
               </li>
           </ul>
       </div>
@@ -44,7 +44,7 @@
             </p>
         </div>
     </div>    
-      <a href="#" class="learn-more-btn" role="button">Žemėlapis</a>
+      <a href="žemelapis.html" class="learn-more-btn" role="button">Žemėlapis</a>
   </div>
 
     <!-- 2nd main part -->
