--- a/Turizmas Lietuvoje/žemelapis.html
+++ b/Turizmas Lietuvoje/žemelapis.html
@@ -14,17 +14,26 @@
             <a href="#" class="logo mr-auto">
                 <img src="IMG/MainPage/LOGO.png" alt="logo" width="190px">
             </a>
-            <ul class="navbar-nav">
-                <li class="nav-item" style="margin-right: 20px;"> 
-                    <a href="index.html" class="nav-link">Pagrindinis</a>
-                </li>
-                <li class="nav-item" style="margin-right: 20px;">
-                    <a href="žemelapis.html" class="nav-link">Žemėlapis</a>
-                </li>
-                <li class="nav-item">
-                    <a href="kontaktai.html" class="nav-link">Kontaktai</a>
-                </li>
-            </ul>
+  
+            <!-- Button for mobile navigation with custom class -->
+            <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+  
+            <!-- Navigation items for both mobile and desktop -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item" style="margin-right: 20px;"> 
+                        <a href="index.html" class="nav-link">Pagrindinis</a>
+                    </li>
+                    <li class="nav-item" style="margin-right: 20px;">
+                        <a href="žemelapis.html" class="nav-link">Žemėlapis</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="kontaktai.html" class="nav-link">Kontaktai</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -41,7 +50,7 @@
                     <p>Visos teisės saugomos</p>
                     <p>Kontaktai: info@vilniausapskritisgidas.lt</p>
                     <p>Tel. +370 123 456 789</p>
-                    <p>Saugumas ir privatumas</p>
+                    <p><a href="https://www.flaticon.com/free-icons/vilnius-gediminas" title="vilnius-gediminas icons" class="footerLogoInfo">Icon used in logo: Vilnius-gediminas icons created by Amethyst prime - Flaticon</a></p>
                 </div>
             </div>
         </footer>
