--- a/Turizmas Lietuvoje/žemelapis.html
+++ b/Turizmas Lietuvoje/žemelapis.html
@@ -39,6 +39,8 @@
 
         <!-- MAIN -->
         <div class="kontaktai">
+
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d441158.294159764!2d25.20734606367204!3d54.792347676961136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1slt!2slt!4v1705834054515!5m2!1slt!2slt" width="1950" height="1000" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             
         </div>
 
