--- a/Turizmas Lietuvoje/kontaktai.html
+++ b/Turizmas Lietuvoje/kontaktai.html
@@ -34,8 +34,15 @@
                     <li class="nav-item">
                         <a href="kontaktai.html" class="nav-link">Kontaktai</a>
                     </li>
+                    <!-- Language buttons with smaller size -->
+                    <li class="nav-item">
+                        <a href="#" class="nav-link lang-btn" onclick="changeLanguage('en')">ENG</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link lang-btn" onclick="changeLanguage('lt')">LT</a>
+                    </li>
                 </ul>
-            </div>
+              </div>
         </div>
     </nav>
 
