--- a/Turizmas Lietuvoje/index.html
+++ b/Turizmas Lietuvoje/index.html
@@ -24,17 +24,24 @@
 
           <!-- Navigation items for both mobile and desktop -->
           <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav ms-auto">
-                  <li class="nav-item" style="margin-right: 20px;"> 
-                      <a href="index.html" class="nav-link">Pagrindinis</a>
-                  </li>
-                  <li class="nav-item" style="margin-right: 20px;">
-                      <a href="žemelapis.html" class="nav-link">Žemėlapis</a>
-                  </li>
-                  <li class="nav-item">
-                      <a href="kontaktai.html" class="nav-link">Kontaktai</a>
-                  </li>
-              </ul>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item" style="margin-right: 20px;"> 
+                    <a href="index.html" class="nav-link">Pagrindinis</a>
+                </li>
+                <li class="nav-item" style="margin-right: 20px;">
+                    <a href="žemelapis.html" class="nav-link">Žemėlapis</a>
+                </li>
+                <li class="nav-item">
+                    <a href="kontaktai.html" class="nav-link">Kontaktai</a>
+                </li>
+                <!-- Language buttons with smaller size -->
+                <li class="nav-item">
+                    <a href="#" class="nav-link lang-btn" onclick="changeLanguage('en')">ENG</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link lang-btn" onclick="changeLanguage('lt')">LT</a>
+                </li>
+            </ul>
           </div>
       </div>
   </nav>
