--- a/Turizmas Lietuvoje/kontaktai.html
+++ b/Turizmas Lietuvoje/kontaktai.html
@@ -29,7 +29,7 @@
                         <a href="index.html" class="nav-link">Pagrindinis</a>
                     </li>
                     <li class="nav-item" style="margin-right: 20px;">
-                        <a href="žemelapis.html" class="nav-link">Žemėlapis</a>
+                        <a href="zemelapis.html" class="nav-link">Žemėlapis</a>
                     </li>
                     <li class="nav-item">
                         <a href="kontaktai.html" class="nav-link">Kontaktai</a>
