--- a/Turizmas Lietuvoje/zemelapis.html
+++ b/Turizmas Lietuvoje/zemelapis.html
@@ -6,6 +6,12 @@
     <title>Žemėlapis</title>
     <link rel="stylesheet" href="CSS/zemelapis.css">
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+     crossorigin=""></script>
 </head>
 <body>
     <!-- Header -->
@@ -45,9 +51,13 @@
     </nav>
 
         <!-- MAIN -->
-        <div class="kontaktai">
+        <div class="searchBar">
 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d441158.294159764!2d25.20734606367204!3d54.792347676961136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1slt!2slt!4v1705834054515!5m2!1slt!2slt" width="1950" height="1000" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
+        <div class="main">
+
+            <div id="map"></div>
             
         </div>
 
