--- a/Turizmas Lietuvoje/kontaktai.html
+++ b/Turizmas Lietuvoje/kontaktai.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <nav class="navbar navbar-expand-lg navbar-light bg-custom">
         <div class="container d-flex align-items-center">
-            <a href="#" class="logo mr-auto">
+            <a href="index.html" class="logo mr-auto">
                 <img src="IMG/MainPage/LOGO.png" alt="logo" width="190px">
             </a>
   
