--- a/Turizmas Lietuvoje/index.html
+++ b/Turizmas Lietuvoje/index.html
@@ -114,7 +114,7 @@
                 
                 <div class="col-lg-4 col-md-6 col-sm-12 d-none d-md-block">
                     <div class="card">
-                      <img src="IMG/Cards/KernavėsPLK-Andrjusgeo WIKIPEDIA.jpg" class="card-img-top" alt="Slide5.jpg">
+                      <img src="IMG/Cards/KernavesPLK-Andrjusgeo WIKIPEDIA.jpg" class="card-img-top" alt="Slide5.jpg">
                       <div class="card-body">
                         <h5 class="card-title">Kernavės piliakalniai</h5>
                         <p class="card-text">Kernavės piliakalniai – tai penki piliakalniai pietiniame Kernavės pakraštyje, Pajautos slėnyje, dešinėje Neries slėnio pusėje. Kernavė – seniausia žinoma Lietuvos Didžiosios Kunigaikštystės sostinė. Nuo 1989 m. ši vieta yra Valstybinio Kernavės kultūrinio rezervato dalis, 2004 m. įtraukta į UNESCO Pasaulio paveldo sąrašą.</p>
